Updated project files to include AssemblyInfo

--- a/Rhino.Security.Windsor/Rhino.Security.Windsor.csproj
+++ b/Rhino.Security.Windsor/Rhino.Security.Windsor.csproj
@@ -71,6 +71,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="RhinoSecurityInstaller.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Rhino.Security\Rhino.Security.csproj">
