--- a/Rhino.Security/Rhino.Security.csproj
+++ b/Rhino.Security/Rhino.Security.csproj
@@ -128,6 +128,7 @@
     <Compile Include="IUser.cs" />
     <Compile Include="Model\Operation.cs" />
     <Compile Include="Model\Permission.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Properties\Resources.resx">
